k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: felipeamendes/multi-client
        resources:
          requests:
            memory: "1Gi"
            cpu: "0.5"
          limits:
            memory: "1.5Gi"
            cpu: "1"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
  - port: 3000
    targetPort: 3000
