k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: felipeamendes/multi-server
        resources:
          requests:
            memory: "300Mi"
            cpu: "500m"
          limits:
            memory: "500Mi"
            cpu: "1000m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
  - port: 5000
    targetPort: 5000
